--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -26,4 +26,4 @@ If you'd like to join the effort, connect with us on [Discord](https://discord.g
 
 OpenNext aims to support all Next.js features and is widely deployed in production across multiple platforms.
 
-[NHS England](https://github.com/nhs-england-tools/terraform-aws-opennext), [Udacity](https://engineering.udacity.com/deploying-next-js-on-the-edge-with-sst-is-sst-the-game-changer-its-claimed-to-be-1f05a0abc27c), [Gymshark UK](https://uk.gymshark.com), [SST](https://sst.dev), [Cloudflare](https://www.cloudflare.com)
+[NHS England](https://github.com/nhs-england-tools/terraform-aws-opennext), [Udacity](https://engineering.udacity.com/deploying-next-js-on-the-edge-with-sst-is-sst-the-game-changer-its-claimed-to-be-1f05a0abc27c), [Gymshark UK](https://uk.gymshark.com), [SST](https://sst.dev), [Cloudflare](https://www.cloudflare.com), [Nike](https://about.nike.com)
